# prism-protocol

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
apps/prism-cli/: Cargo.toml
apps/prism-protocol-cli/: Cargo.toml
apps/prism-protocol-cli/src/: config.rs  error.rs  main.rs
apps/prism-protocol-cli/src/commands/: campaign_status.rs  check_eligibility.rs  claim_tokens.rs  compile_campaign.rs  deploy_campaign.rs  deploy_cohort.rs  fund_vaults.rs  generate_campaign.rs  generate_fixtures.rs  mod.rs  pause_campaign.rs  query_claims.rs  reclaim_tokens.rs  resume_campaign.rs
crates/legacy-prism-protocol-sdk/: Cargo.toml
crates/legacy-prism-protocol-sdk/src/: campaign_compiler.rs
crates/prism-protocol-batch-tx/: Cargo.toml
crates/prism-protocol-batch-tx/src/: client.rs  config.rs  error.rs  lib.rs
crates/prism-protocol-client/: Cargo.toml
crates/prism-protocol-client/src/: client.rs  errors.rs  lib.rs  types.rs
crates/prism-protocol-csvs/: Cargo.toml
crates/prism-protocol-csvs/src/: errors.rs  lib.rs  schemas.rs  validation.rs
crates/prism-protocol-db/: Cargo.toml
crates/prism-protocol-db/src/: database.rs  lib.rs  schema.rs
crates/prism-protocol-merkle/: Cargo.toml
crates/prism-protocol-merkle/src/: builder.rs  claim_tree_v0.rs  claim_tree_v1.rs  hasher.rs  hasher_v0.rs  hasher_v1.rs  lib.rs  proof.rs
crates/prism-protocol-migrations/: Cargo.toml
crates/prism-protocol-migrations/src/: lib.rs  m20250605_153353_baseline_schema.rs  main.rs
crates/prism-protocol-sdk/: Cargo.toml
crates/prism-protocol-sdk/src/: address_finder.rs  address_finders.rs  budget_allocation.rs  campaign_compiler.rs  campaign_database.rs  instruction_builders.rs  lib.rs  transaction_builders.rs
crates/prism-protocol-sdk/src/campaign_compiler/: campaign_csv_writer.rs  campaign_writer.rs  claim_tree.rs  cohort_writer.rs  cohorts_csv_writer.rs  compiled_campaign_database.rs  compiler_error.rs  mod.rs
crates/prism-protocol-sdk/src/campaign_compiler/compiled_campaign_database/: compiled_campaign_ext.rs  compiled_cohort_ext.rs  compiled_leaf_ext.rs  compiled_proof_ext.rs  compiled_vault_ext.rs
crates/prism-protocol-testing/: Cargo.toml  build.rs
crates/prism-protocol-testing/benches/: gas_optimization_verification.rs
crates/prism-protocol-testing/src/: campaign_snapshot.rs  fixture_stage.rs  fixture_state.rs  lib.rs  test_fixture.rs
crates/prism-protocol-testing/tests/: TODO.md  test_campaign_activation_already_activated.rs  test_campaign_activation_before_cohort_activation.rs  test_campaign_activation_edge_cases.rs  test_campaign_activation_go_live_slot_in_past.rs  test_campaign_activation_invalid_ipfs_hash.rs  test_campaign_activation_missing_cohorts.rs  test_campaign_activation_success.rs  test_campaign_expected_cohort_count_zero.rs  test_campaign_fingerprint_consistency.rs  test_campaign_make_unstoppable_success.rs  test_campaign_pause_inactive.rs  test_campaign_pause_success.rs  test_campaign_resume_already_active.rs  test_campaign_resume_success.rs  test_campaign_status_transitions.rs  test_claim_amount_exceeds_vault_capacity.rs  test_claim_before_go_live.rs  test_claim_duplicate_prevention.rs  test_claim_exact_go_live_slot_boundary.rs  test_claim_inactive_campaign.rs  test_claim_insufficient_lamports_for_rent.rs  test_claim_invalid_merkle_proof.rs  test_claim_maximum_instruction_data_size.rs  test_claim_maximum_merkle_proof_size.rs  test_claim_numeric_overflow.rs  test_claim_paused_campaign.rs  test_claim_permanently_halted_campaign.rs  test_claim_receipt_timestamp_edge_cases.rs  test_claim_tokens_happy_path.rs  test_claim_vault_balance_insufficient.rs  test_claim_vault_completely_drained.rs  test_claim_vault_index_out_of_bounds.rs  test_claim_wrong_mint_associated_token_account.rs  test_claim_wrong_pda_bump_values.rs  test_claim_zero_amount_per_entitlement.rs  test_cohort_activation_before_vault_activation.rs  test_cohort_activation_requirements.rs  test_cohort_expected_vault_count_zero.rs  test_cohort_initialization_before_campaign.rs  (+27 more)
docs/: ARCHITECTURE_DECISIONS.md  CAMPAIGN_SETUP_GUIDE.md  DEPLOYMENT_ARCHITECTURE.md  DESIGN_NOTES.md  DUAL_TREE_FTW.md  PROJECT_PLAN.md  PROTOCOL_ARCHITECTURE.md  TESTING_STRATEGY.md  USER_JOURNEYS.md
programs/prism-protocol/: Cargo.toml
programs/prism-protocol/src/: claim_leaf.rs  claim_tree_constants.rs  constants.rs  error.rs  lib.rs  merkle_leaf.rs  proofs.rs  sdk.rs  state.rs  test_utils.rs
programs/prism-protocol/src/instructions/: activate_campaign_v0.rs  activate_cohort_v0.rs  activate_vault_v0.rs  claim_tokens_common.rs  claim_tokens_v0.rs  claim_tokens_v1.rs  create_vault_v0.rs  initialize_campaign_v0.rs  initialize_cohort_v0.rs  initialize_vault_v0.rs  make_campaign_unstoppable_v0.rs  mod.rs  pause_campaign_v0.rs  permanently_halt_campaign_v0.rs  reclaim_tokens.rs  reclaim_tokens_v0.rs  resume_campaign_v0.rs  set_campaign_active_status.rs
programs/prism-protocol/src/merkle_tree/: builder.rs  hasher.rs  mod.rs  proof.rs
programs/prism-protocol/src/sdk/: address_finders.rs  instruction_builders.rs
programs/prism-protocol/tests/: test_admin_mismatch_error_message.rs  test_campaign_activation_before_cohorts_ready.rs  test_campaign_fingerprint_mismatch.rs  test_campaign_state_consistency.rs  test_claim_before_campaign_activation.rs  test_claim_tokens_v0.rs  test_cohort_activation_before_all_vaults_ready.rs  test_complete_campaign_happy_path.rs  test_create_vault_v0.rs  test_initialize_campaign_v0.rs  test_initialize_cohort_v0.rs  test_invalid_entitlements_error.rs  test_multi_cohort_campaign_flow.rs  test_no_cohorts_expected_error.rs  test_no_vaults_expected_error.rs  test_out_of_bounds_operations.rs  test_too_many_vaults_error.rs  test_vault_operations_on_nonexistent_cohorts.rs  test_wrong_admin_initialize_cohort.rs  test_wrong_admin_initialize_vault.rs
scripts/: anchor-deploy  check-secrets  common.sh  decrypt-secrets  encrypt-secrets  generate-configs  generate-entities  install-hooks  migrate  shred-secrets  test-cli.sh  test-docker.sh  test-e2e.sh  (+1 more)
(+32 files in other folders)
