[workspace]
members = ["apps/prism-protocol-cli", "crates/*", "programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
borsh = "1.5.7"
mollusk-svm = "0.0.15"
mollusk-svm-programs-token = "0.0.15"
rs_merkle = "1.5.0"
solana-program = "2.1.21"
solana-sdk = "2.1.21"

# CLI dependencies
chrono = "0.4"
clap = "4.5"
csv = "1.3"
rusqlite = "0.36.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
