[workspace]
members = [
    # "apps/prism-protocol-cli",
    # "crates/*",
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
borsh = "1.5.7"
chrono = "0.4"
clap = "4.5"
csv = "1.3"
hex = "0.4"
mollusk-svm = "0.0.15"
mollusk-svm-programs-token = "0.0.15"
rand = "0.8"
rs_merkle = "1.5.0"
rusqlite = "0.36.0"
rust_decimal = "1.37.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
solana-client = "2.1.21"
solana-program = "2.1.21"
solana-sdk = "2.1.21"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
tempfile = "3.20.0"
thiserror = "1.0"
