[workspace]
members = [
    # "apps/prism-protocol-cli",
    "crates/prism-protocol-batch-tx",
    # "crates/prism-protocol-client",
    "crates/prism-protocol-csvs",
    "crates/prism-protocol-entities",
    "crates/prism-protocol-merkle",
    "crates/prism-protocol-migrations",
    "crates/prism-protocol-sdk",
    "crates/prism-protocol-testing",
    # "crates/*",
    "programs/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
backoff = "0.4"
bincode = "2"
borsh = "1.5.7"
chrono = "0.4"
clap = "4.5"
csv = "1.3"
futures = "0.3"
hex = "0.4"
litesvm = "0.6.1"
litesvm-token = "0.6.1"
log = "0.4"
rand = "0.8"
rs_merkle = "1.5.0"
# rusqlite = "0.36.0"
rust_decimal = "1.37.1"
sea-orm = "1.1"
sea-orm-cli = "1.1"
sea-orm-migration = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
solana-account = "2.2.1"
solana-client = "2.1.21"
solana-hash = "2.1.21"
solana-instruction = "2.1.21"
solana-keypair = "2.1.21"
solana-message = "2.1.21"
solana-program = "2.1.21"
solana-pubkey = "2.1.21"
solana-sdk = "2.1.21"
solana-signature = "2.1.21"
solana-signer = "2.1.21"
solana-system-interface = "1"
solana-sysvar = "2.1.21"
solana-transaction = "2.1.21"
solana-transaction-error = "2.1.21"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
tempfile = "3.20.0"
thiserror = "1.0"
tokio = "1.45"
tokio-test = "0.4"
tracing = "0.1"
url = "2.5.4"
