[package]
name = "prism-protocol-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prism-protocol"
path = "src/main.rs"

[dependencies]
prism_protocol = { path = "../../programs/prism-protocol", features = [
    "no-entrypoint",
] }
prism-protocol-merkle = { path = "../../crates/prism-protocol-merkle" }
prism-protocol-sdk = { path = "../../crates/prism-protocol-sdk" }

chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# prism-protocol-testing = { path = "../../crates/prism-protocol-testing" }
