[package]
name = "legacy-prism-protocol-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "legacy_prism_protocol_sdk"
path = "src/lib.rs"

[dependencies]
prism-protocol-csvs = { path = "../prism-protocol-csvs" }
prism-protocol-db = { path = "../prism-protocol-db" }
prism-protocol-merkle = { path = "../prism-protocol-merkle" }
prism_protocol = { path = "../../programs/prism-protocol", features = [
    "no-entrypoint",
] }

anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
csv = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
