[package]
name = "prism-protocol-batch-tx"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
backoff = { workspace = true, features = ["futures", "tokio"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["time"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
