[package]
name = "prism-protocol-csvs"
version = "0.1.0"
edition = "2021"
description = "CSV schema definitions and validation for Prism Protocol"

[lib]
name = "prism_protocol_csvs"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
csv = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-str"] }
serde = { workspace = true, features = ["derive"] }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
