[package]
name = "prism-protocol-db"
version = "0.1.0"
edition = "2021"
description = "Database management for Prism Protocol campaigns"

[lib]
name = "prism_protocol_db"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true }
rusqlite = { workspace = true, features = ["backup", "bundled"] }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
