[package]
name = "prism-protocol-merkle"
version = "0.1.0"
edition = "2021"

[lib]
name = "prism_protocol_merkle"
path = "src/lib.rs"

[dependencies]
prism_protocol = { path = "../../programs/prism-protocol", features = [
    "no-entrypoint",
] }

anchor-lang = { workspace = true }
rs_merkle = { workspace = true }
