[package]
name = "prism-protocol-sdk"
version = "0.1.0"
edition = "2021"

[dependencies.prism_protocol]
path = "../../programs/prism-protocol"
features = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
hex = { workspace = true }
prism-protocol-csvs = { path = "../prism-protocol-csvs" }
prism-protocol-entities = { path = "../prism-protocol-entities" }
prism-protocol-merkle = { path = "../prism-protocol-merkle" }
prism-protocol-migrations = { path = "../prism-protocol-migrations" }
rust_decimal = { workspace = true, features = ["macros"] }
sea-orm = { workspace = true }
tempfile = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
