[package]
name = "prism-protocol-testing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prism-protocol-sdk = { path = "../../crates/prism-protocol-sdk" }
prism_protocol = { path = "../../programs/prism-protocol", features = [
    "no-entrypoint",
] }

litesvm = { workspace = true, features = [] }
litesvm-token = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-sysvar = { workspace = true }
solana-transaction = { workspace = true }
