[package]
name = "prism-protocol-testing"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "prism_protocol_testing"
path = "src/lib.rs"

[dependencies.prism_protocol]
features = ["no-entrypoint"]
path = "../../programs/prism-protocol"

[dependencies]
anchor-lang = { workspace = true }
bincode = { workspace = true }
litesvm = { workspace = true, features = [] }
litesvm-token = { workspace = true }
prism-protocol-entities = { path = "../../crates/prism-protocol-entities" }
prism-protocol-sdk = { path = "../../crates/prism-protocol-sdk" }
rust_decimal = { workspace = true, features = ["macros"] }
sha2 = { workspace = true }
solana-account = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
