[package]
name = "prism_protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prism_protocol"

[features]
anchor-debug = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
sdk = ["no-entrypoint"]
test-sbf = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
mollusk-svm-programs-token = { workspace = true, features = [
    "associated-token",
    "token",
] }
prism-protocol-merkle = { path = "../../crates/prism-protocol-merkle" }
prism-protocol-sdk = { path = "../../crates/prism-protocol-sdk" }
prism-protocol-testing = { path = "../../crates/prism-protocol-testing" }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
